# weather

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cli-args.c  cli-args.h  get_url_details.c  get_url_details.h  getpage.c  main.c  main.h  screen-output.c  weather-parse.c  weather-parse.h
.github/workflows/: ccpp.yml
src/: get_url_details.c  getpage.h  main.c  main.h  screen-output.c  screen-output.h  weather-parse.c
